--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.0.6"
 pillow = "^10.3.0"
 psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
