--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pillow = "^10.3.0"
 psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
+django-phonenumber-field = "^8.0.0"
+phonenumbers = "^8.13.39"
 
 
 [build-system]
