add filters and orders in Payment view, add payments_info in user view

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework = "^3.15.2"
 python-dotenv = "^1.0.1"
 django-phonenumber-field = "^8.0.0"
 phonenumbers = "^8.13.39"
+django-filter = "^24.2"
 
 
 [build-system]
