--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-phonenumber-field = "^8.0.0"
 phonenumbers = "^8.13.39"
 django-filter = "^24.2"
 djangorestframework-simplejwt = "^5.3.1"
+coverage = "^7.5.4"
 
 
 [build-system]
