--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-filter = "^24.2"
 djangorestframework-simplejwt = "^5.3.1"
 coverage = "^7.5.4"
 drf-yasg = "^1.21.7"
+stripe = "^10.2.0"
 
 
 [build-system]
