--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ djangorestframework-simplejwt = "^5.3.1"
 coverage = "^7.5.4"
 drf-yasg = "^1.21.7"
 stripe = "^10.2.0"
+celery = "^5.4.0"
+python-crontab = "^3.2.0"
+django-celery-beat = "^2.6.0"
+redis = "^5.0.7"
 
 
 [build-system]
