--- a/.env.sample
+++ b/.env.sample
@@ -3,18 +3,16 @@ TEST=False
 # ================MAIN_DJANGO_SETTINGS=================
 SECRET_KEY='django-insecure-05)sopmygf#7e0slcq9ipitwbgmtm44oms&=xt=8b5ds3vcl7g'
 ALLOWED_HOSTS=127.0.0.1
-# ================DATABASE=================
+# ================DATABASE-SERVER=================
 DB_NAME=
 DB_USER=postgres
-DB_HOST=localhost
-DB_PORT=
-PASSWORD=
-# ================CACHE=================
-LOCATION_CACHE=
-BACKEND_CACHE=
-BACKEND_CACHE_TEST=
+DB_PASSWORD=
+# ================DATABASE-SETTINGS=================
+POSTGRES_DB=
+POSTGRES_PASSWORD=
 # ================CELERY=================
-BROKER_URL=redis://127.0.0.1:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
 DEFAULT_DATABASE_BEAT=django_celery_beat.schedulers.DatabaseScheduler
 # ================STRIPE=================
 STRIPE_API_KEY=
