--- a/.env.sample
+++ b/.env.sample
@@ -11,7 +11,7 @@ DB_PASSWORD=
 POSTGRES_DB=
 POSTGRES_PASSWORD=
 # ================CELERY=================
-CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_BROKER_URL=pyamqp://rmuser:rmpassword@rabbitmq//
 CELERY_RESULT_BACKEND=redis://redis:6379/0
 DEFAULT_DATABASE_BEAT=django_celery_beat.schedulers.DatabaseScheduler
 # ================STRIPE=================
